# cc-zol

./: .env.example  .gitignore  CLAUDE.md  README.md  auth_server.py  install.sh  pyproject.toml  server.py  setup-server.sh  start-auth-server.sh
api/: admin_routes.py  app.py  auth_routes.py  dependencies.py  optimization_handlers.py  request_utils.py  routes.py
api/models/: anthropic.py
auth/: __init__.py  database.py  email_service.py  middleware.py  models.py
cli/: manager.py  process_registry.py  session.py
config/: settings.py
providers/: __init__.py  openai_compat.py  openai_mixins.py  openai_provider.py  rate_limit.py
providers/common/: heuristic_tool_parser.py  message_converter.py  sse_builder.py
providers/generic/: __init__.py  client.py  request.py  settings.py
providers/llamacpp/: client.py
providers/lmstudio/: client.py
providers/nvidia_nim/: request.py
providers/open_router/: request.py
providers/utils/: message_converter.py  sse_builder.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_converter.py  test_dependencies.py  test_model_utils.py  test_models_validators.py  test_openai_provider.py  test_parsers.py  test_provider_rate_limit.py  test_request_utils.py  test_routes_optimizations.py  test_subagent_interception.py
zol/: __init__.py  config.py  main.py  models.json  port_utils.py  server_manager.py  tui.py
